<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">FRC Recycle Rush Pit Scouter</string>
    <string name="app_name_short">RR Pit Scouter</string>

    <!-- Team Info-->
    <string name="team_number_hint">Enter a team number.</string>

    <string name="auto">AUTO</string>
    <string name="teleop">TELEOP</string>
    <string name="coopertition">COOPERTITION</string>
    <string name="team_info">TEAM INFO</string>

    <string name="take">Take!</string>
    <string name="auto_programs">Number of Programs:</string>
    <string name="auto_move">Can move to AZ:</string>
    <string name="auto_totes">Number of totes \nable to move to AZ:</string>
    <string name="auto_containers">Number of containers to AZ:</string>
    <string name="auto_tote_height">Tote stack height in AZ:</string>
    <string name="auto_move_tote_stack">Can move tote stack:</string>
    <string name="auto_start_pos">Preferred starting position:</string>
    <string name="between_0_and_3"># btw 0-3</string>
    <string name="mech">MECHANISMS</string>
    <string name="mech_litter">Litter(Noodle):</string>
    <string name="mech_inserter">Inserter</string>
    <string name="mech_pusher">Pusher</string>
    <string name="mech_tote">Tote</string>
    <string name="mech_feeder">Feeder</string>
    <string name="mech_container">Container</string>
    <string name="mech_flipper">Flipper</string>
    <string name="mech_step_remover">Step Remover</string>
    <string name="blue">BLUETOOTH</string>
    <string name="blue_on">Turn On</string>
    <string name="blue_off">Turn Off</string>
    <string name="blue_visible">Get Visible</string>
    <string name="blue_list">List Devices</string>
    <string name="blue_send">Open Bluetooth Sender</string>
    <string name="txt">TXT</string>
    <string name="send_title">Send Teams</string>

    <string name="tele_stack_totes">Stack Totes:</string>
    <string name="tele_stack_container">Stack Container:</string>
    <string name="tele_place_litter">Place litter on/in container:</string>
    <string name="tele_place_totes_on_stack">Place totes on stack:</string>
    <string name="tele_carry_totes">Carry Totes:</string>
    <string name="tele_actions">ACTIONS</string>
    <string name="tele_max_height">MAX HEIGHT</string>
    <string name="between_0_and_6"># btw 0-6</string>
    <string name="tele_coop_set">Coopertition set:</string>
    <string name="tele_coop_stack">Can place bin on 3rd or \n4th level of Coop set:</string>
    <string name="tele_platform">Preferred platform:</string>
    <string name="tele_human_station">Preferred human station:</string>
    <string name="tele_plat_long">Long w/ ramp</string>
    <string name="tele_plat_short">Short across ramp</string>
    <string name="tele_pick_up_litter">Can pick up litter:</string>
    <string name="tele_move_litter">Can move litter to landfill:</string>
    <string name="tele_stack_direction">Preferred stacking direction:</string>
    <string name="tele_does_not_stack">Does not stack</string>

    <!-- Report Builder-->

    <string name="team_report_text">Send Team Report</string>
    <string name="team_report_step_remover">Has step remover.</string>
    <string name="team_report_no_step_remover">Does not have step remover.</string>
    <string name="team_report_coop_stack">Can place bin on 3rd or 4th level of Coop set.</string>
    <string name="team_report_no_coop_stack">Can NOT place bin on 3rd or 4th level of Coop set.</string>
    <string name="team_report_litter_pusher">Has litter pusher.</string>
    <string name="team_report_no_litter_pusher">Does not have litter pusher.</string>
    <string name="txt_match_num">Enter match number.</string>
    <string name="txt_team_num">Team Number:</string>
    <string name="txt_litter_pusher">Litter Pusher.</string>
    <string name="txt_litter_inserter">Litter Inserter.</string>
    <string name="txt_tote_feeder">Tote Feeder.</string>
    <string name="txt_container_flipper">Container Flipper.</string>
    <string name="txt_container_step_remover">Container Step Remover.</string>
    <string name="txt_has_mech">HAS MECHANISMS:</string>
    <string name="txt_dnh_mech">DOES NOT HAVE MECHANISMS:</string>
    <string name="txt_auto_progs"># of Auto Programs:</string>
    <string name="txt_auto_can_move_az">Can move to auto zone.</string>
    <string name="txt_auto_can_not_move_az">Can NOT move to AZ.</string>
    <string name="txt_auto_totes"># of totes able to move to auto zone:</string>
    <string name="txt_auto_conatiners"># of containers able to move to auto zone:</string>
    <string name="txt_auto_can_move_tote_stack">Can move tote stack to auto zone.</string>
    <string name="txt_auto_can_not_move_tote_stack">Can NOT move tote stack to auto zone.</string>
    <string name="txt_auto_pos">Preferred Auto Position:</string>
    <string name="txt_coop">COOP</string>
    <string name="txt_tele">TELEOP</string>
    <string name="txt_tele_totes">Tote stack height:</string>
    <string name="txt_tele_conatiner">Container stack height:</string>
    <string name="txt_tele_litter">Litter on/in container height:</string>
    <string name="txt_tele_tote_stack">Place totes on stack height:</string>
    <string name="txt_tele_carry_totes">Carry totes height:</string>
    <string name="txt_tele_human_station">Preferred human station:</string>
    <string name="txt_tele_platfrom">Preferred platform:</string>
    <string name="txt_send_match">Send Match</string>
    <string name="txt_send_all_teams">Send All Teams</string>
    <string name="txt_send_one_team">Send One Team</string>
    <string name="txt_team_1">Enter Team 1</string>
    <string name="txt_team_2">Enter Team 2</string>
    <string name="txt_team_3">Enter Team 3</string>
    <string name="txt_team_4">Enter Team 4</string>
    <string name="txt_team_5">Enter Team 5</string>
    <string name="txt_team_6">Enter Team 6</string>
    <string name="scout_name">Scout Name</string>
    <string name="tele_can_flip_totes">Can flip totes:</string>
    <string name="tele_can_remove_container">Can remove container from step:</string>
    <string name="comments">COMMENTS</string>
    <string name="txt_scout_name">Scouted by:</string>
    <string name="enter_comments">Enter comments.</string>
    <string name="txt_tele_can_flip_totes">Can flip totes.</string>
    <string name="txt_tele_can_not_flip_totes">Can NOT flip totes.</string>
    <string name="txt_tele_can_remove_container">Can remove container from step.</string>
    <string name="txt_tele_can_not_remove_conatiner">Can NOT remove container from step.</string>
    <string name="txt_tele_can_pick_litter">Can pick up litter.</string>
    <string name="txt_tele_can_not_pick_litter">Can NOT pick up litter.</string>
    <string name="txt_tele_can_move_litter">Can move litter to landfill.</string>
    <string name="txt_tele_can_not_move_litter">Can NOT move litter to landfill.</string>
    <string name="txt_comments">Comments:</string>
    <string name="txt_tele_can_place_bin">Can place bin on 4th level of Coop set.</string>
    <string name="txt_tele_can_not_place_bin">Can NOT place bin on 4th level of Coop set.</string>
    <string name="txt_tele_coop_set">Coop set height:</string>
    <string name="txt_tele_stacking_direction">Preferred stacking direction:</string>

    <!--Advanced-->

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!--Action Bar-->

    <string name="teams_title">Teams List</string>
    <string name="new_team">New Team</string>
    <string name="delete_team">Delete</string>
    <string name="send_teams">Send Teams</string>
    <string name="help">Click Me For Help!</string>

    <!-- Bluetooth Options Menu -->

    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

    <string name="sample_show_log">Show Log</string>
    <string name="sample_hide_log">Hide Log</string>



    <string name="json">JSON</string>
    <string name="json_send">Send JSON String</string>
    <string name="json_comp">Enter Competition Name.</string>
    <string name="json_load">Load JSON String</string>
    <string name="json_string">Enter JSON string here.</string>


</resources>
