<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blue"
                style="?android:listSeparatorTextViewStyle"/>

            <Button android:id="@+id/blueOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blue_on" />

            <Button
                android:id="@+id/blueOff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blue_off" />

            <Button android:id="@+id/blueVisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blue_visible" />

            <Button android:id="@+id/blueList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blue_list" />

            <Button android:id="@+id/blueSendTeams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blue_send_teams" />

            <ListView android:id="@+id/blueListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" >
            </ListView>

        </LinearLayout>



            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="18sp"
                    />

                <TextView
                    android:id="@+id/title_paired_devices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#666"
                    android:paddingLeft="5dp"
                    android:text="@string/title_paired_devices"
                    android:textColor="#fff"
                    android:visibility="gone"
                    />

                <ListView
                    android:id="@+id/paired_devices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:stackFromBottom="true"
                    />

                <TextView
                    android:id="@+id/title_new_devices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#666"
                    android:paddingLeft="5dp"
                    android:text="@string/title_other_devices"
                    android:textColor="#fff"
                    android:visibility="gone"
                    />

                <ListView
                    android:id="@+id/new_devices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:stackFromBottom="true"
                    />

                <Button
                    android:id="@+id/button_scan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_scan"
                    />
            </LinearLayout>




            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sms"
                style="?android:listSeparatorTextViewStyle"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
